--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<meta charset="utf-8">
-	<title>Video & Audio</title>
+	<title>Première page web</title>
 </head>
 <body>
 	<h1>Table 1</h1>
